<resources>
    <string name="app_name">ABRIS Tracker</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="exit">Exit</string>
    <string name="action_help">Помощь</string>
    <string name="action_abris_link">Ссылка на Abris или что-то</string>
    <string name="content_description_abris_logo">Логотип Abris</string>
    <string name="action_stop">Стоп</string>
    <string name="action_start">Старт</string>
    <string name="hint_car_number">Номер машины</string>
    <string name="caption_tracking_on">Отслеживание включено</string>
    <string name="content_description_tracking_status">Состояние отслеживания</string>
    <string name="caption_message">Сообщение</string>
    <string name="caption_no_messages">Нет новых сообщений</string>
    <string name="action_alarm">Тревога</string>
</resources>
