<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_login_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintBottom_toTopOf="@+id/login_password_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_login_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_8"
        app:layout_constraintBottom_toTopOf="@+id/login_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_sign_in_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/login_password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_password_text_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_help_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:text="@string/action_help"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_sign_in_button"
        app:layout_constraintEnd_toStartOf="@+id/login_sign_in_button" />

    <ImageView
        android:id="@+id/login_logo_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_32"
        android:contentDescription="@string/content_description_abris_logo"
        android:src="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/login_login_text_input_layout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_abris_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/action_abris_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>