<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_service_root_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_service_tracking_status_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/main_service_car_number_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tracking_on"
            android:contentDescription="@string/content_description_tracking_status" />

        <TextView
            android:id="@+id/main_service_tracking_status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="@+id/main_service_tracking_status_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_service_tracking_status_image_view"
            app:layout_constraintTop_toTopOf="@+id/main_service_tracking_status_image_view"
            tools:text="@string/caption_tracking_on" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_service_car_number_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_8"
            android:hint="@string/hint_car_number"
            app:layout_constraintBottom_toTopOf="@+id/main_service_start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_service_tracking_status_image_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_service_car_number_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_service_start_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/action_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_service_stop_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_service_car_number_text_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_service_stop_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/padding_16"
            android:text="@string/action_stop"
            app:layout_constraintBaseline_toBaselineOf="@+id/main_service_start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/main_service_start_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>